# Government-Ai-Agent-Platform

./: README.md
DataPipeLine/: .gitignore  requirements.txt  script.py
contracts/: data_quality_rules.yaml  indicator_contract.yaml  (+1 more)
services/data-pipeline/: .env.example  pyproject.toml
services/data-pipeline/config/: settings.py  source_registry.py  source_registry.yaml
services/data-pipeline/gold/: io.py  run.py  run_gold.py  transforms.py
services/data-pipeline/gold/loaders/: local_parquet_loader.py  postgres_loader.py
services/data-pipeline/gold/tables/: crisis_risk.py  fiscal_monetary.py  growth_dynamics.py  social_welfare.py  structural_composition.py
services/data-pipeline/jobs/: build_silver.py  ingest_sources.py  load_silver_bigquery.py
services/data-pipeline/ops/: gcs_layout.py  manifest.py
services/data-pipeline/pipeline/: job.py
services/data-pipeline/sources/: bronze.py  gcs_upload.py  local_discovery.py  models.py  registry.py
services/data-pipeline/storage/: bigquery_loader.py  bigquery_staging_loader.py
services/data-pipeline/storage/schema/: gold_crisis_risk.sql  gold_fiscal_monetary.sql  gold_growth_dynamics.sql  gold_social_welfare.sql  gold_structural_composition.sql
services/data-pipeline/tests/: test_bigquery_silver_load_plan.py  test_bigquery_silver_loader.py  test_build_silver.py  test_gcs_upload_plan.py  test_ingest_sources.py  test_local_source_discovery.py  test_source_registry.py
services/data-pipeline/utils/: io_paths.py
services/data-pipeline/warehouse/: bigquery_silver_load_plan.py  bigquery_silver_loader.py
(+290 files in other folders)
