[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "government-ai-platform"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "pyspark==4.1.1",
    "pandas>=2.2,<3",
    "pyarrow>=15,<22",
    "numpy>=1.26,<3",
    "python-dotenv>=1.0",
    "psycopg2-binary>=2.9",
    "sqlalchemy>=2.0,<3",
    "fastapi>=0.111,<1",
    "uvicorn[standard]>=0.29,<1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "pytest-cov>=5",
    "ruff>=0.4",
    "mypy>=1.10",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["config*", "gold*", "pipeline*", "storage*", "utils*"]
exclude = ["tests*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts   = "-v --tb=short"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.11"
ignore_missing_imports = true
